force-app/main/default/objects/sked__Tag__c/sked__Tag__c.object-meta.xml
<CustomObject>
    <description>string metadata to be associated  with any other object</description>
    <label>Tag</label>
    <nameField>
        <label>Tag</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tags</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>