force-app/main/default/objects/sked__Tag__c/fields/sked__Classification__c.field-meta.xml
<CustomField>
    <fullName>sked__Classification__c</fullName>
    <description>Whether this tag is for human / asset or both type of resources.</description>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
                <default>true</default>
                <label>Global</label>
            </value>
            <value>
                <fullName>Human</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>