force-app/main/default/objects/sked__Tag__c/fields/sked__Type__c.field-meta.xml
<CustomField>
    <fullName>sked__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Asset Type</fullName>
            </value>
            <value>
                <fullName>Physical Location Type</fullName>
            </value>
            <value>
                <fullName>Drive Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>