force-app/main/default/objects/sked__Tag__c/fields/sked__UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>sked__UniqueKey__c</fullName>
    <description>System field to enforce that tag names are unique. Do not use for other purposes.</description>
    <inlineHelpText>System field to enforce that tag names are unique. Do not use for other purposes.</inlineHelpText>
    <label>UniqueKey</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>