force-app/main/default/objects/sked__Tag__c/fields/sked_Priority__c.field-meta.xml
<CustomField>
    <fullName>sked_Priority__c</fullName>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>