force-app/main/default/objects/sked__Tag__c/fields/sked_Role_ID__c.field-meta.xml
<CustomField>
    <fullName>sked_Role_ID__c</fullName>
    <label>Role ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>