force-app/main/default/objects/sked__Tag__c/validationRules/Validate_Role_ID_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Role_ID_Format</fullName>
    <active>true</active>
    <description>HRP-5973</description>
    <errorConditionFormula>OR(    
    AND(
        ISPICKVAL(sked__Type__c, &quot;Role&quot;),
        ISBLANK(sked_Role_ID__c)
    ),
    
    AND(
        NOT(ISBLANK(sked_Role_ID__c)),
        NOT(REGEX(sked_Role_ID__c, &quot;^SKED-[ST]-.*&quot;))
    )
)</errorConditionFormula>
    <errorMessage>Role ID is required when Type is &apos;Role&apos; and must start with &apos;SKED-S-&apos; or &apos;SKED-T-&apos;.</errorMessage>
</ValidationRule>