force-app/main/default/objects/sked__Tag__c/listViews/Drive_Types.listView-meta.xml
<ListView>
    <fullName>Drive_Types</fullName>
    <columns>NAME</columns>
    <columns>sked__Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sked__Type__c</field>
        <operation>equals</operation>
        <value>Drive Type</value>
    </filters>
    <label>Drive Types</label>
    <language>en_US</language>
</ListView>