force-app/main/default/objects/sked__Tag__c/listViews/Physical_Location_Type.listView-meta.xml
<ListView>
    <fullName>Physical_Location_Type</fullName>
    <columns>NAME</columns>
    <columns>sked__Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sked__Type__c</field>
        <operation>equals</operation>
        <value>Physical Location Type</value>
    </filters>
    <label>Physical Location Type</label>
    <language>en_US</language>
</ListView>