force-app/main/default/objects/sked__Tag__c/listViews/Roles.listView-meta.xml
<ListView>
    <fullName>Roles</fullName>
    <columns>NAME</columns>
    <columns>sked_Role_ID__c</columns>
    <columns>sked__Type__c</columns>
    <columns>sked__Classification__c</columns>
    <columns>sked_Priority__c</columns>
    <columns>sked_MigrationID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sked__Type__c</field>
        <operation>equals</operation>
        <value>Role</value>
    </filters>
    <label>Roles</label>
</ListView>