force-app/main/default/objects/sked__Tag__c/listViews/sked__All.listView-meta.xml
<ListView>
    <fullName>sked__All</fullName>
    <columns>NAME</columns>
    <columns>sked__Type__c</columns>
    <columns>sked_Priority__c</columns>
    <columns>sked__Classification__c</columns>
    <columns>sked_Resource_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>